--- a/lib/sass/centurion/_buttons.scss
+++ b/lib/sass/centurion/_buttons.scss
@@ -1,27 +1,18 @@
-// Buttons
-// ----------------------------
-
-// Buttons are an important way to call out a user action and are highly customizable within Centurion. The first step is to include the default button specifications with `@include buttons` and you can either start creating custom versions for a specific design or add the default custom buttons included by including: `@include custom-buttons`.
-
-// Creating custom buttons allows for unique colors and specifications to fit any design. (All buttons are flat colors by default and don't include gradients.) Text color for the create-button mixin is defaulted to white.
-
-// `@include create-button($class, $color1, $color2, $text-color: $white);`
-
-// Default Buttons
+// Button Mixins
 // ----------------------------
 @mixin default-button() {
+  @extend %cursor;
+  @extend %typography;
   background: $lighter-grey;
   border: none;
   color: $black;
-  //@include box-shadow(0, 1px, 2px);
-  @extend %cursor;
-  @extend %typography;
+  @include box-shadow(0, 1px, 2px);
   display: inline-block;
   @include rem(font-size, $default-font-size);
   font-weight: normal;
   @include element-spacing(vertical, margin, $default-font-size);
   outline: 0;
-  @include element-spacing(two, padding, 8, 20);
+  @include element-spacing(two, padding, 8, 16);
   text-decoration: none;
   vertical-align: middle;
   zoom: 1;
@@ -32,9 +23,9 @@
   color: $black;
 }
 
-// Button Create
-// @include button(class, color1, color2, text-color: $white)
-@mixin create-button($class, $color1, $color2, $text-color: $white) {
+// Button Create (Flat)
+// @include button(class, color1, color2, text-color)
+@mixin btn($class, $color1, $color2, $text-color: $white) {
   .#{$class} {
     @extend .btn;
     background-color: $color1;
@@ -46,54 +37,76 @@
   }
 }
 
+
+// Bordered Button Create
+// @include button(class, color1, text-color)
+@mixin border-btn($class, $color1, $text-color: $color1) {
+  .#{$class} {
+    @extend .btn;
+    @extend %bordered-btn;
+    box-shadow: none;
+    border-color: $color1;
+    color: $color1;
+    &:hover {
+      background-color: $color1;
+      color: $white;
+    }
+  }
+}
+
 // Buttons
 // ----------------------------
 @mixin buttons() {
   .btn {
     @include default-button;
     @extend %noTextDecoration;
+    -webkit-transition: background 120ms linear;
+    transition: background 120ms linear;
     &:hover {
       @include default-button-hover;
     }
   }
+   
+  %bordered-btn {
+    background-color: transparent;
+    border: 2px solid $grey;
+  }
   
   .small-btn {
-    @include rem(font-size, 12);
-    @include element-spacing(two, padding, 6, 16);
     @extend .btn;
+    @include rem(font-size, 10);
+    @include element-spacing(two, padding, 6, 12);
   }
   
   .large-btn {
-    @include rem(font-size, 18);
-    @include element-spacing(two, padding, 12, 28);
     @extend .btn;
+    @include rem(font-size, 18);
+    @include element-spacing(two, padding, 8, 36);
   }
   
   .full-btn {
+    @extend .btn;
     @include element-spacing(vertical, padding, 10);
     text-align: center;
     width: 100%;
-    @extend .btn;
   }
   
   .inline-btn {
     margin: 0;
   }
   
-}
-
-@mixin custom-buttons() {
-
-  @include create-button(blue-btn, $blue, $dark-blue);
+  @include btn(blue-btn, $blue, $dark-blue);
+  @include btn(red-btn, $red, $dark-red);
+  @include btn(purple-btn, $purple, $dark-purple);
+  @include btn(orange-btn, $orange, $dark-orange);
+  @include btn(green-btn, $green, $dark-green);
+  @include btn(dark-grey-btn, $dark-grey, $black);
   
-  @include create-button(red-btn, $red, $dark-red);
+  @include border-btn(blue-btn-bdr, $blue, $dark-blue);
+  @include border-btn(red-btn-bdr, $red, $dark-red);
+  @include border-btn(purple-btn-bdr, $purple, $dark-purple);
+  @include border-btn(orange-btn-bdr, $orange, $dark-orange);
+  @include border-btn(green-btn-bdr, $green, $dark-green);
+  @include border-btn(dark-grey-btn-bdr, $dark-grey, $black);
   
-  @include create-button(purple-btn, $purple, $dark-purple);
-  
-  @include create-button(orange-btn, $orange, $dark-orange);
-  
-  @include create-button(green-btn, $green, $dark-green);
-  
-  @include create-button(dark-grey-btn, $dark-grey, $black);
-
 }
