--- a/lib/sass/centurion/_typography.scss
+++ b/lib/sass/centurion/_typography.scss
@@ -39,12 +39,12 @@
   
   h2 {
     @extend %typography;
-    @include rem(font-size, $default-font-size + 16);
+    @include rem(font-size, $default-font-size + 14);
   }
   
   h3 {
     @extend %typography;
-    @include rem(font-size, $default-font-size + 12);
+    @include rem(font-size, $default-font-size + 10);
   }
   
   h4 {
@@ -78,6 +78,11 @@
     @include rem(font-size, $default-font-size);
     margin: 0;
     @include rem(padding-left, $default-font-size - 8);
+  }
+  
+  a {
+    -webkit-transition: color 120ms linear;
+    transition: color 120ms linear;
   }
   
   blockquote {
