--- a/lib/sass/centurion/_grid.scss
+++ b/lib/sass/centurion/_grid.scss
@@ -5,7 +5,7 @@
 @mixin column-grid {
 
   %column-base {
-    @include box-sizing(border-box);
+    box-sizing: border-box;
     float: $lang-front;
     padding: 0 $gutter / 2 + $value;
     position: relative;
