--- a/lib/sass/centurion/_normalize.scss
+++ b/lib/sass/centurion/_normalize.scss
@@ -2,71 +2,70 @@
 @mixin normalize {
   html {
     font-family: sans-serif;
-    -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
+    text-size-adjust: 100%;
   }
-  
+
   body {
     margin: 0;
   }
-  
+
   /* HTML5 display definitions */
   article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
     display: block;
   }
-  
+
   audio, canvas, progress, video {
     display: inline-block;
     vertical-align: baseline;
   }
-  
+
   audio:not([controls]) {
     display: none;
     height: 0;
   }
-  
+
   [hidden], template {
     display: none;
   }
-  
+
   /* Links */
-  
+
   a {
     background: transparent;
     &:active, &:hover {
       outline: 0;
     }
   }
-  
+
   /* Text-level semantics */
   abbr[title] {
     border-bottom: 1px dotted;
   }
-  
+
   b, strong {
     font-weight: bold;
   }
-  
+
   dfn {
     font-style: italic;
   }
-  
+
   mark {
     background: yellow;
     color: black;
   }
-  
+
   small {
     font-size: 80%;
   }
-  
+
   sub {
     font-size: 75%;
     line-height: 0;
     position: relative;
     vertical-align: baseline;
   }
-  
+
   sup {
     font-size: 75%;
     line-height: 0;
@@ -74,80 +73,80 @@
     vertical-align: baseline;
     top: -0.5em;
   }
-  
+
   sub {
     bottom: -0.25em;
   }
-  
+
   /* Embedded content */
-  
+
   img {
     border: 0;
   }
-  
+
   svg:not(:root) {
     overflow: hidden;
   }
-  
+
   /* Grouping content */
-  
+
   figure {
     margin: 1em 40px;
   }
-  
+
   hr {
-    -moz-box-sizing: content-box;
+    //-moz-box-sizing: content-box;
     box-sizing: content-box;
     height: 0;
   }
-  
+
   pre {
     overflow: auto;
   }
-  
+
   code, kbd, pre, samp {
     font-family: monospace, monospace;
     font-size: 1em;
   }
-  
+
   /* Forms */
-  
+
   button, input, optgroup, select, textarea {
     color: inherit;
     font: inherit;
     margin: 0;
   }
-  
+
   button {
     overflow: visible;
     text-transform: none;
   }
-  
+
   select {
     text-transform: none;
   }
-  
+
   button, html input[type="button"] {
-    -webkit-appearance: button;
+    appearance: button;
     cursor: pointer;
   }
-  
+
   input {
     &[type="reset"], &[type="submit"] {
-      -webkit-appearance: button;
+      appearance: button;
       cursor: pointer;
     }
   }
-  
+
   button[disabled], html input[disabled] {
     cursor: default;
   }
-  
+
   button::-moz-focus-inner {
     border: 0;
     padding: 0;
   }
-  
+
   input {
     &::-moz-focus-inner {
       border: 0;
@@ -164,42 +163,42 @@
       }
     }
     &[type="search"] {
-      -webkit-appearance: textfield;
-      -moz-box-sizing: content-box;
-      -webkit-box-sizing: content-box;
+      appearance: textfield;
+      //-moz-box-sizing: content-box;
+      //-webkit-box-sizing: content-box;
       box-sizing: content-box;
       &::-webkit-search-cancel-button, &::-webkit-search-decoration {
-        -webkit-appearance: none;
+        appearance: none;
       }
     }
   }
-  
+
   fieldset {
     border: 1px solid silver;
     margin: 0 2px;
     padding: 0.35em 0.625em 0.75em;
   }
-  
+
   legend {
     border: 0;
     padding: 0;
   }
-  
+
   textarea {
     overflow: auto;
   }
-  
+
   optgroup {
     font-weight: bold;
   }
-  
+
   /* Tables */
-  
+
   table {
     border-collapse: collapse;
     border-spacing: 0;
   }
-  
+
   td, th {
     padding: 0;
   }
