push & pull reset on devices and fixing nested grid spacing

--- a/lib/sass/centurion/_config.scss
+++ b/lib/sass/centurion/_config.scss
@@ -35,6 +35,7 @@ $prefix-class: "ctn";
 $container-class: $prefix-class+"-container";
 
 $grid-class: $prefix-class+"-grid";
+$row-class: $prefix-class+"-row";
 $push-class: $prefix-class+"-push";
 $pull-class: $prefix-class+"-pull";
 //$pre-class: $prefix-class+"-pre";
