Flex Grid added to core include for usage.

--- a/lib/sass/_centurion-framework.scss
+++ b/lib/sass/_centurion-framework.scss
@@ -4,6 +4,7 @@
 
 // Centurion Grid
 @import "centurion/grid";
+@import "centurion/flex-grid";
 
 // Centurion Libraries
 @import "centurion/colors";
