--- a/lib/sass/centurion.scss
+++ b/lib/sass/centurion.scss
@@ -6,24 +6,25 @@ body {
   line-height: 1;
 }
 
-@include normalize;
-@include column-grid;
+@include normalize();
+//@include column-grid;
+@include flex-grid();
 
-@include typography;
+@include typography();
 
-@include buttons;
-@include badges;
-@include callouts;
-@include forms;
+@include buttons();
+@include badges();
+@include callouts();
+@include forms();
 
-@include margin-block-layout;
-@include padding-block-layout;
+@include margin-block-layout();
+@include padding-block-layout();
 
-@include tables;
+@include tables();
 
-//@include navigation;
+//@include navigation();
 
-@include float-elements;
+@include float-elements();
 
 // Visible and Show/Hide Classes
 .visible {
