--- a/lib/sass/centurion/_badges.scss
+++ b/lib/sass/centurion/_badges.scss
@@ -5,7 +5,7 @@
 // @include badges(class, color, textColor)
 // Task: Optimize with BEM method for fewer class declarations
 @mixin badge($class, $color, $text-color) {
-  &#{$class} {
+  &.#{$class} {
     @extend %badge;
     background-color: $color;
     color: $text-color;
@@ -16,7 +16,7 @@
 // @include badge-bk-colors(class, color)
 // Task: Optimize with BEM method for fewer class declarations
 @mixin badge-w-borders($class, $color) {
-  &#{$class} {
+  &.#{$class} {
     @extend %badge;
     @extend %bordered-badge;
     border-color: $color;
@@ -44,19 +44,19 @@
     background-color: transparent;
     border: 1px solid $light-grey;
   }
-  
+
   @include badge(red-badge, $red, $white);
   @include badge(blue-badge, $blue, $white);
   @include badge(purple-badge, $purple, $white);
   @include badge(orange-badge, $orange, $white);
   @include badge(green-badge, $green, $white);
-  
+
   @include badge(red-badge-lt, $light-red, $darker-grey);
   @include badge(blue-badge-lt, $light-blue, $darker-grey);
   @include badge(purple-badge-lt, $light-purple, $darker-grey);
   @include badge(orange-badge-lt, $light-orange, $darker-grey);
   @include badge(green-badge-lt, $light-green, $darker-grey);
-  
+
   @include badge-w-borders(red-badge-bdr, $red);
   @include badge-w-borders(blue-badge-bdr, $blue);
   @include badge-w-borders(purple-badge-bdr, $purple);
