--- a/lib/sass/custom.scss
+++ b/lib/sass/custom.scss
@@ -1,28 +1,14 @@
 @import "centurion-framework";
 $lang-front: left;
 
-@include color-swatches;
-
 // CUSTOM FOR PREVIEW
 // ----------------------------
-code, pre {
-  @include rem(font-size, 14);
-}
-.code-inline {
-  top: -12px;
-  position: relative;
-}
-
-
 hr {
   background: $grey;
-  background-image: -webkit-linear-gradient(left, $lighter-grey, $grey, $lighter-grey);
-  background-image: -moz-linear-gradient(left, $lighter-grey, $grey, $lighter-grey);
-  background-image: -ms-linear-gradient(left, $lighter-grey, $grey, $lighter-grey);
-  background-image: -o-linear-gradient(left, $lighter-grey, $grey, $lighter-grey);
+  background-image: linear-gradient(left, $lighter-grey, $grey, $lighter-grey);
   border: 0;
   height: 1px;
-  @include rem(margin, 48 0 16 0);
+  @include rem(margin, 48px 0 16px 0);
 }
 
 a {
@@ -41,11 +27,10 @@ nav {
   a {
     color: $black;
     display: inline-block;
-    font-size: 0.9em;
+    @include rem(font-size, 14px);
     font-weight: 100;
-    padding: 1em;
+    @include rem(padding, 16px);
     text-decoration: none;
-    -webkit-transition: background-color 100ms linear;
     transition: background-color 100ms linear;
     &:hover,
     &.nav-current {
@@ -57,9 +42,9 @@ nav {
 
 footer {
   background: $lighter-grey;
-  margin-top: 4em;
+  @include rem(margin-top, 48px);
   p {
-    font-size: 0.8em;
+    @include rem(font-size, 12px);
   }
 }
 
@@ -67,22 +52,22 @@ footer {
 // For Example Grid elements
 // ----------------------------
 .calculate {
-  @include rem(margin-bottom, 32);
+  @include rem(margin-bottom, 32px);
 }
 span.box-grid {
   background-color: $light-blue;
   box-sizing: border-box;
   display: block;
-  @include rem(font-size, 12);
+  @include rem(font-size, 12px);
   font-weight: 100;
-  @include rem(margin-top, 10);
-  @include rem(padding, 8 0);
+  @include rem(margin-top, 10px);
+  @include rem(padding, 8px 0);
   text-align: center;
   width: 100%;
 }
 .color-row {
   background-color: $lighter-grey;
-  margin: .5rem 0;
+  @include rem(margin, 8px 0);
 }
 
 // Grid Demo
@@ -99,47 +84,33 @@ span.box-grid {
     .last,
     &:last-of-type {
       .box-grid {
-        background: $blue;
-        color: #FFF;
-        @include rem('margin-bottom', 8);
+        @extend %show-grid-default;
       }
     }
     [class^="ctn-grid-"] {
       &:first-child {
         .box-grid {
-          background: $blue;
-          color: #FFF;
-          @include rem('margin-bottom', 8);
+          @extend %show-grid-default;
         }
       }
     }
   }
 }
-// Push and Pull
+// Show Push
 [class^="ctn-grid-"] {
   &[class*="push-"] {
     .box-grid {
-      background-color: $light-blue;
-    }
-  }
-  &[class*="pull-"] {
-    .box-grid {
-      background-color: $blue;
-      color: #FFF;
+      @extend %show-grid-default;
     }
   }
 }
 
-.rotate{
-  -webkit-transition-duration: 0.75s;
-  transition-duration: 0.75s;
-  -webkit-transition-property: -webkit-transform;
-  transition-property: transform;
-}
-
-.rotate:hover {
-  -webkit-transform:rotateY(360deg);
-  transform:rotateY(360deg);
+%show-grid-default {
+  background: $blue;
+  color: $white;
+  @include rem(margin-bottom, 8);
 }
 
 @include clearfix;
+
+@include color-swatches;
