Fix for flex grid when aligning grid elements via middle or bottom

--- a/lib/sass/centurion/_flex-grid.scss
+++ b/lib/sass/centurion/_flex-grid.scss
@@ -20,6 +20,7 @@ $gutter-half: 10px;
     box-sizing: border-box;
     margin: 0 auto;
     padding: 0;
+    height: 100%;
     max-width: $d-width + $value;
 
     %grid-flex-base {
@@ -37,6 +38,7 @@ $gutter-half: 10px;
     flex: 0 1 auto;
     flex-direction: row;
     flex-wrap: wrap;
+    height: 100%;
   }
 
   // Small Desktop
